--- a/style.css
+++ b/style.css
@@ -18,9 +18,15 @@ h2 {
   font-size: 13px;
 }
 a {
-  color: yellow;
+  color: #FFB300;
 }
 a:hover {
   text-decoration: none;
   color: purple;
 }
+footer {
+  font-family: Courier;
+  color: red;
+  font-weight: lighter;
+  font-size: 10px;
+  }
