Cours Javascript, Partie 2
Design

--- a/Style3.css
+++ b/Style3.css
@@ -67,13 +67,13 @@ a:hover {
   text-decoration: none;
 }
 
-.feature {
+<.feature,.defi{
   border: 1px solid #F2F2F2;
+  background: #FAFAFA;
   margin: 15px;
   padding: 15px 0;
   text-align: center;
   width: 400px;
-  background: #FAFAFA;
 }
 
  #apropos{
@@ -103,3 +103,15 @@ nav ul {
   position: relative;
   top:1px;
 }
+
+#welcome{
+  background-color: #41A3C0;
+  text-align: center;
+  padding: 50px;
+  color: white;
+}
+
+#welcome h4{
+ font-size: 50px;
+}
+
