--- a/Style3.css
+++ b/Style3.css
@@ -1,7 +1,7 @@
 /* style.css */
 
 body{
-  background: #fff;
+  background: #3b4563;
   color: #000; 
   font-size: 16px;
   font-family: 'Source Sans Pro', sans-serif;
@@ -98,14 +98,14 @@ a:hover {
 #logo{
   color: #fff;
   font-size: 35px;
-  font-family: 'Pacifico', cursive;
+  font-family: 'Permanent Marker', cursive;
   float: left;
   margin-left: 50px;
 }
 
 
 #welcome{
-  background-color: #41A3C0;
+  background-color: #40c0a8;
   text-align: center;
   padding: 50px;
   color: white;
