--- a/Style3.css
+++ b/Style3.css
@@ -75,7 +75,8 @@ a:hover {
 	width:200px;
 	height:100px;
 	background:rgb(225, 0, 152);
-	text-align: center;
+	margin-left: auto;
+        margin-right: auto;
 }
 
 #baseline a:hover {
