--- a/Style3.css
+++ b/Style3.css
@@ -159,7 +159,7 @@ button {
   cursor: pointer;
   transition: all 0.3s ease;
   
-button:hover {
+#baseline button:hover {
     animation: gradient 10s ease infinite;
     font-size: 2.05vw;
     box-shadow: 0.2vw 0.2vw 0 lightcoral;
