--- a/Style3.css
+++ b/Style3.css
@@ -138,3 +138,17 @@ footer p {
    margin: 0;
    padding: 0;
 }
+
+.bouton a {
+display:block;
+width:150px;
+line-height:50px;
+text-align:center;
+vertical-align:middle;
+background:url(images/bouton-noir.png) no-repeat;
+color:white;
+text-decoration:none;
+}
+.bouton a:hover {
+background:url(images/bouton-noir-2.png) no-repeat;
+}
