--- a/Style3.css
+++ b/Style3.css
@@ -150,8 +150,9 @@ button {
   box-shadow: 1vw 1vw 0 lightcoral;
   cursor: pointer;
   transition: all 0.3s ease;
+}
   
-  &:hover {
+#baseline a:hover {
     animation: gradient 10s ease infinite;
     font-size: 2.05vw;
     box-shadow: 0.2vw 0.2vw 0 lightcoral;
