--- a/Style3.css
+++ b/Style3.css
@@ -152,7 +152,7 @@ button {
   transition: all 0.3s ease;
 }
   
-#baseline a:hover {
+#baseline a:button:hover {
     animation: gradient 10s ease infinite;
     font-size: 2.05vw;
     box-shadow: 0.2vw 0.2vw 0 lightcoral;
