--- a/Style3.css
+++ b/Style3.css
@@ -152,15 +152,10 @@ button {
   transition: all 0.3s ease;
 }
   
-#baseline a:button:hover {
+#baseline a:hover {
     animation: gradient 10s ease infinite;
     font-size: 2.05vw;
     box-shadow: 0.2vw 0.2vw 0 lightcoral;
   }
 }
 
-@keyframes gradient {
-  50% {
-    background-position: 100% 0;
-  }
-}
